--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.20.6",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
+    "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "path": "^0.12.7",
     "react": "^18.3.1",
