--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.26.1",
