--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "react-intersection-observer": "^9.13.0",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.26.1",
     "redux-persist": "^6.0.0",
