--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "path": "^0.12.7",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
@@ -25,6 +27,7 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.0",
     "react-player": "^2.16.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.26.1",
     "redux-persist": "^6.0.0",
