--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.2.1",
     "@ant-design/icons": "^5.2.6",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.20.6",
