--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.26.1",
+    "react-vertical-timeline-component": "^3.6.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.77.8"
   },
